kube-student/practice-pods/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: nginx
        labels:
         app: nginx
spec:
        replicas: 3
        selector:
          matchLabels:
               app: nginx
        template:
          metadata:
            labels:
              app: nginx
          spec:
            containers:
            - name: nginx
              image: nginx:1.15.4
              ports:
              - containerPort: 80
            tolerations:
            - key: "test"
              operator: "Equal"         
              value: "blue"
              effect: "NoSchedule"
