kube-student/practice-pods/nodeSelctor.yaml
apiVersion: v1
kind: Pod
metadata:
 name: nginx
 labels:
  mylabel: test
spec:
 containers:
 - name: nginx
   image: nginx
 nodeSelector:
  mylabel: test
