kube-student/practice-pods/rolling-updates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: rolling-updates
spec:
 replicas: 3
 selector:
  matchLabels:
   app: kubeserve
 template:
  metadata:
   name: rolling-updates
   labels:
    app: kubeserve
  spec:
   containers:
   - name: app
     image: linuxacademycontent/kubeserve:v1
